k8s/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager-db
  namespace: taskmanager
spec:
  selector:
    matchLabels:
      app: taskmanager-db
  template:
    metadata:
      labels:
        app: taskmanager-db
    spec:
      containers:
      - name: db
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql
          name: sql-storage
      volumes:
      - name: sql-storage
        persistentVolumeClaim:
          claimName: sql-pvc
