k8s/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskmanager-db
  namespace: taskmanager
spec:
  ports:
  - port: 1433
    targetPort: 1433
  selector:
    app: taskmanager-db
